# FancyRenderer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
cmake/: compiler.cmake  deps.cmake  options.cmake  platform.cmake
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/include/: Win.h  i_includes.h  utils.h
src/engine/: CMakeLists.txt
src/engine/core/include/: core.h  dx_renderer.h  renderer.h  renderer_base.h  renderer_factory.h  vk_renderer.h  window.h
src/engine/core/src/: core.cpp  dx_renderer.cpp  renderer_base,cpp  vk_renderer.cpp  window.cpp
